--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,3 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/security_demo
+spring.datasource.url=jdbc:mysql://localhost:3306/E_M_System
 spring.datasource.username=root
 spring.datasource.password=Nabendu123
