--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
 spring.jpa.hibernate.ddl-auto=none
-spring.datasource.url=jdbc:mysql://localhost:3306/E_M_System
+spring.datasource.url=jdbc:mysql://localhost:3306/examManagementSystem
 spring.datasource.username=root
 spring.datasource.password=Nabendu123
