set main database as datasource

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
 spring.jpa.hibernate.ddl-auto=none
-spring.datasource.url=jdbc:mysql://localhost:3306/ems
-spring.datasource.username=root
-spring.datasource.password=Nabendu123
+spring.datasource.url=jdbc:mysql://marscodeit.com:3306/marscode_oems
+spring.datasource.username=marscode_oems
+spring.datasource.password=OemsTeam1234@
