connect database update application.properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,10 @@
 spring.jpa.hibernate.ddl-auto=none
-spring.datasource.url=jdbc:mysql://localhost:3306/ems
-spring.datasource.username=root
-spring.datasource.password=Nabendu123
+#spring.datasource.url=jdbc:mysql://localhost:3306/ems
+#spring.datasource.username=root
+#spring.datasource.password=Nabendu123
+#server.servlet.context-path= /api
+spring.datasource.url=jdbc:mysql://uesagmk2t18jfd2j:4RsgsGgMPzRflOnQckI7@bkjr9uwpvdnpdxaz0lxp-mysql.services.clever-cloud.com:3306/bkjr9uwpvdnpdxaz0lxp
+spring.datasource.username=uesagmk2t18jfd2j
+spring.datasource.password=4RsgsGgMPzRflOnQckI7
 server.servlet.context-path= /api
 server.port=8080
