--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,6 +8,9 @@ spring.datasource.url=jdbc:mysql://uesagmk2t18jfd2j:4RsgsGgMPzRflOnQckI7@bkjr9uw
 spring.datasource.username=uesagmk2t18jfd2j
 spring.datasource.password=4RsgsGgMPzRflOnQckI7
 
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+
+
 server.servlet.context-path= /api
 server.port=8080
 
