--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@ target/
 !**/src/main/**/target/
 !**/src/test/**/target/
 classes
+src/main/resources/application-local.properties
 
 ### STS ###
 .apt_generated
