--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,6 +9,9 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 server.servlet.context-path= /api
 server.port=${OEMS_PORT}
 
+logging.level.org.springframework=DEBUG
+
+
 
 
 
