--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.jpa.hibernate.ddl-auto=none
-spring.datasource.url=${OEMS_DATASOURCE_URL}
+spring.datasource.url=jdbc:${OEMS_DATASOURCE_URL}
 spring.datasource.username=${OEMS_DATASOURCE_USERNAME}
 spring.datasource.password=${OEMS_DATASOURCE_PASSWORD}
 
