--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -19,6 +19,11 @@ jobs:
       - name: Checkout the repo
         uses: actions/checkout@v2
 
+      - name: Print info
+        run: |
+          echo $OEMS_DATASOURCE_URL
+
+
       - name: Log in to Docker Hub
         uses: docker/login-action@f054a8b539a109f9f41c372932f1ae047eff08c9
         with:
@@ -27,6 +32,7 @@ jobs:
 
       - name: Build image
         run: |
+          echo $OEMS_DATASOURCE_URL
           docker build -t ${{ env.IMAGE }}:${{ env.TAG }} . --build-arg GIT_BRANCH=${GITHUB_REF##*/}
 
       - name: Push image to DockerHUB Container Registry
