--- a/pom.xml
+++ b/pom.xml
@@ -105,6 +105,7 @@
 	</dependencies>
 
 	<build>
+		<finalName>oems</finalName>
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
